--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.116.1"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 websockets = "^12.0"
 ptyprocess = "^0.7.0"
+validators = "^0.22.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
