--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ validators = "^0.22.0"
 pytest = "^8.0"
 pytest-asyncio = "^0.23.0"
 httpx = "^0.27.0"
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
