--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,11 @@ jobs:
       uses: snok/install-poetry@v1
     - name: Install dependencies
       run: poetry install
-    - name: Run tests
-      run: poetry run pytest
+    - name: Run tests with coverage
+      run: poetry run pytest --cov --cov-branch --cov-report=xml
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
