build: Run tests in parallel by default

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = -v -n auto --timeout=11
 pythonpath = .
 filterwarnings =
     ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning
