--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest-asyncio = "^0.23.0"
 httpx = "^0.27.0"
 pytest-cov = "^6.2.1"
 pytest-xdist = "^3.8.0"
+pytest-timeout = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
